# datastore

./: .dockerignore  .env-sample  .env-store  .env-store-production  .env-sync-server  .gitignore  .gitlab-ci.yml  .npmignore  .npmrc  Cargo.toml  Makefile  README.md  TODO.md  available_platform.txt  bun.lockb  bunfig.toml  docker-compose-nginx.yml  docker-compose-template.yml  docker-compose.yml  dockerfile  dockerfile-server  dockerfile-store  dockerfile-test-os  drizzle.config.ts  ecosystem.config.js  message_flow_diagram.md  package.json  pnpm-lock.yaml  prometheus.yml  test_concatenated_fields  test_concatenation.rs  test_improved_concatenated_fields  tsconfig.json
.cargo/: config.toml
docker/: Dockerfile  entrypoint.sh
docs/: High-Load-Resilience.md
drizzle/: 0000_equal_skin.sql  0000_familiar_madripoor.sql  0000_quiet_korg.sql  0000_slippery_turbo.sql  0000_special_fantastic_four.sql  0000_steep_monster_badoon.sql  0000_superb_mesmero.sql  0000_vengeful_the_fallen.sql  0001_normal_synch.sql  0001_thin_yellow_claw.sql  0002_overconfident_tenebrous.sql  0003_clumsy_gressill.sql
mcp-proto-generator/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  claude_desktop_config.json  example_schema.rs  example_schema.sql  test_diesel_request.json
mcp-proto-generator/src/: main.rs
scripts/: convert_drizzle_to_diesel_schema.py  migrate_table_to_new_table.sql  migrate_table_to_new_table_safe_backfill.sql  post-checkout  post-merge  pre-push  setup-hooks.sh
skills/: classroom_course_episodes.md  classroom_course_stories.md  classroom_course_stories_episodes.md  classroom_courses.md  classroom_students.md  classrooms.md  communication_templates.md  courses.md  episodes.md  locations.md  report_child_victims.md  report_files.md  reports.md  stories.md  teacher_schools.md  teacher_students.md  template.md
sql/: sqlite.db
src/: grpc.module.ts  http.module.ts  init.ts  main.module.ts  main.ts  setup.sql
(+571 files in other folders)
