[workspace]
members = [
    "libs/hlc",
    "libs/merkle",
    "bin/main",
    "bin/store",
    "bin/server",
    "bin/store-generator",
    "bin/ckpt",
    "bin/counter-service"
    "bin/migrate-from-db"
]
resolver = "2"

[profile.release]
lto = false
codegen-units = 16
opt-level = 3
panic = "abort"
strip = true