[package]
name = "mcp-diesel-proto-generator"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <kashankhalid@dnamicro.com"]
description = "A Model Context Protocol (MCP) server that generates Protocol Buffer definitions from Diesel SQL schemas"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/mcp-proto-generator"
readme = "README.md"
keywords = ["protobuf", "mcp", "claude", "diesel", "schema"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["claude_desktop_config.json", "example_schema.sql"]

[[bin]]
name = "mcp-proto-generator"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
convert_case = "0.6"
regex = "1.0"